--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </head>
     <body>
 		<h1> Hello World </h1>
+		 <a href="http://www.protechshop.info/">Visit our shop tutorial</a> 
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
