--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
 		<h1> Hello World </h1>
-		 <a href="http://www.protechshop.info/">Visit our shop tutorial</a> 
+		 <a href="http://www.protechshop.info/" target="_blank">Visit our shop tutorial</a> 
 		 
 		 <a href="http://www.protechshop.info/" onclick="openInAppBrowserBlank('http://www.protechshop.info/');">open InAppBrowser</a>
 
